# longevity-knowledge-base

./: .dockerignore  .gitignore  COX4I1_Drugs.txt  COX4I1_GO.txt  Dockerfile  GABPA_Drugs.txt  GABPA_GO.txt  README.md  docker-compose.yml  next.config.ts  package-lock.json  package.json  pyproject.toml
app/: globals.css  page.module.css  page.tsx
app/chat/: chat.module.css  page.tsx
components/: CommandPalette.tsx
components/chat/: ArtifactsPanel.tsx  ChatBubble.tsx  ChatList.tsx  ChatWindow.tsx  Composer.tsx  MessageInput.tsx  ProfilePanel.tsx  ProteinChips.tsx  SearchModeSelect.tsx  SideDNA.tsx  bubble.module.css  chat.module.css
components/hero/: DNAField.tsx  DNAToggle.tsx  Hero.tsx  hero.module.css
components/home/: ProteinSpotlight.tsx
components/nav/: Navbar.tsx  navbar.module.css
components/proteins/: ProteinCard.tsx
components/sidebar/: Sidebar.tsx  SidebarInteractive.tsx  sidebar.module.css
components/transitions/: PageTransition.tsx
components/ui/: MagneticButton.tsx  magnetic.module.css
lib/: prisma.ts
llm-agent/: .dockerignore  Dockerfile  README.md  requirements.txt
llm-agent/data/: AROCM.csv  Biological_Bootstrap.xlsx  Blood.xlsx  Breast.xlsx  Chronological_Bootstrap.xlsx  Coefficients.xlsx  Cognition.xlsx  Gene_to_Peptide.xlsx  Lung.xlsx  (+7 more)
longevity-agent/: context.py  main.py
pages/: _app.tsx  _document.tsx  about.tsx  chat.tsx  clocks.tsx  index.tsx  login.tsx  manifesto.tsx  proteins.tsx  signup.tsx
prisma/: dev.db  dev.db.bak  schema.prisma
styles/: hero.module.css  login.module.css  page.module.css  spotlight.module.css
(+80 files in other folders)
