[project]
name = "longevity-knowledge-base"
version = "1.0.0"
description = "Comprehensive longevity research and bioinformatics agent with 25+ specialized tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # OpenAI Agents SDK
    "openai-agents>=0.4.0",
    
    # Data processing
    "pandas>=2.3.3",
    "openpyxl>=3.1.2",
    
    # Bioinformatics
    "biopython>=1.83",
    
    # Web scraping & API
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.3",
    
    # Phylogenetics & visualization
    "ete3>=3.1.3",
    "toytree>=2.0.5",
    "toyplot>=1.0.3",
    "matplotlib>=3.8.0",
    
    # PDF generation
    "reportlab>=4.0.0",
    
    # CLI & output
    "rich>=14.2.0",
]
